# fastapi-ecommerce

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: main.py
app/api/v1/: auth.py  customers.py
app/core/: config.py  db.py  exception.py  security.py  security.py.bak
app/db/: mongo.py
app/schema/: auth.py  base.py  customer_schema.py
app/services/: auth.py  customer_service.py
